<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorTransparent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparent"
                        android:orientation="vertical">

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/colorPrimary"
                            android:theme="@style/AppToolbar"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:title=""
                            app:titleTextColor="#fdb21b" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorTransparent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitulo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ellipsize="end"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:text="@string/registro_title_registro"
                            android:textAlignment="center"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                            android:textColor="@color/colorTitles" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="match_parent"></LinearLayout>
                </LinearLayout>
            </android.support.design.widget.AppBarLayout>
        </android.support.design.widget.CoordinatorLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/content_margin_top"
            android:background="@color/colorTitles">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/registro_rellene_campos_registro"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/btnRegistroAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/ivRegistroAvatar"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/no_image_user"
                        app:civ_border="false"
                        app:civ_border_width="1dp"
                        app:civ_shadow="true"
                        app:civ_shadow_radius="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/editar"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPressed"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegistroNombre"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/registro_nombre"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegistroClub"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/registro_club"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegistroEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/registro_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegistroPass"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/registro_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etRegistroPassRepeat"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:hint="@string/registro_password_repeat"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:shadowColor="@color/colorPressed"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorGrey"
                    android:textColorHint="@color/colorGrey"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/btnRegistrarse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_rounded_primary"
                        android:maxLines="1"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/registro_btn_registrarse"
                        android:textAllCaps="false"
                        android:textColor="@color/colorTitles"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>