<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TOOLBAR -->
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorTransparent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorTransparent"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        android:theme="@style/AppToolbar"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                        app:title=""
                        app:titleTextColor="#fdb21b" />

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:text="@string/principal"
                        android:textAlignment="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorTitles" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/content_margin_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cvAprende"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="54dp"
                                android:layout_height="56dp"
                                android:src="@drawable/menu_aprende"
                                android:scaleType="centerInside"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/btnAprende"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMapa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryFocus">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="54dp"
                                android:layout_height="56dp"
                                android:src="@drawable/menu_mapa"
                                android:scaleType="centerInside"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/btnSimbolosMapa"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryFocus">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="54dp"
                                android:layout_height="56dp"
                                android:src="@drawable/menu_descripcion"
                                android:scaleType="centerInside"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:text="@string/btnSimbolosDescripcion"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:maxLines="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvMixto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">
                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="54dp"
                                android:layout_height="56dp"
                                android:src="@drawable/menu_quiz"
                                android:scaleType="centerInside"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/btnMixQuiz"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />

                </RelativeLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cvRanking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDarker">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="54dp"
                                android:layout_height="56dp"
                                android:src="@drawable/menu_ranking"
                                android:scaleType="centerInside"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="2dp"
                        android:ellipsize="end"
                        android:text="@string/btnClasificacion"
                        android:maxLines="2"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>